--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>SamJuna Gaming:)</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://fonts.googleapis.com/css2?family=Pacifico&family=WindSong:wght@500&display=swap" rel="stylesheet">
@@ -69,6 +69,11 @@
     </div>
     <div class="carousel-item">
       <img src="7.jpeg" alt="New York" width="1100" height="500">
+      <div class="carousel-caption">
+      </div>   
+    </div>
+    <div class="carousel-item">
+      <img src="6.jpg" alt="New York" width="1100" height="500">
       <div class="carousel-caption">
       </div>   
     </div>
